# Ma-at

./: .gitignore  README.md  main.py  pyproject.toml
data/: evaluation_queries.json
privacy-analyzer/: README.md  prompts.yml
privacy-analyzer/chroma_db/5a7e38f5-e3c2-40d2-b6fc-358681ab47fb/: index_metadata.pickle
privacy-analyzer/evaluation/: results.md
privacy-analyzer/examples/: demo.py
privacy-analyzer/mcp_server/: server.py
privacy-analyzer/rag/: indexing.py  retrieval.py
privacy-analyzer/scripts/: download_data.py
