[project]
name = "maat"
version = "0.1.0"
description = "Ma'at - Privacy Policy & Terms of Service (ToS) Analyzer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastmcp>=3.4.2",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters",
    "mcp>=1.28.0",
    "openai",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
